--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 	<body>
 		<h1>Esta es una página de prueba</h1>
 		<p>Este es un segundo cambio</p>
+		<p>Esta página está en construcción, por lo que pedimos su comprensión y paciencia</p>
 	</body>
 </html>
